fix card text overflow

--- a/css/cards.css
+++ b/css/cards.css
@@ -70,6 +70,12 @@
   display: none;
 }
 
+.card-body{
+  overflow: hidden;
+  white-space: nowrap; 
+  text-overflow: ellipsis; 
+}
+
 .card-title {
   overflow: hidden;
   white-space: nowrap; 
